--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_ActividadProd.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_ActividadProd.cshtml
@@ -16,16 +16,16 @@
                 <div class="card-body">
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="txtActividadActProd" class="text-small">Actividad</label>
+                            <label for="txtActividadActProd" class="text-small">*Actividad</label>
                             @Html.TextBox("txtActividadActProd", "", new { @class = "form-control form-control-sm", maxlength = "50", onkeypress = "return utilSigo.checkLetter(event)" })
                         </div>
                         <div class="form-group col-md-6">
-                            <label for="txtAreaActProd" class="text-small">Área</label>
+                            <label for="txtAreaActProd" class="text-small">*Área</label>
                             @Html.TextBox("txtAreaActProd", "", new { @class = "form-control form-control-sm", maxlength = "7", onblur = "return utilSigo.onBlurThreeDecimal(this,'Area');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
                         </div>
                     </div>
                     @*<div class="form-row">*@
-                    <div class="card-header text-small">Especie Forestal</div>
+                <div class="card-header text-small">*Especie Forestal</div>
                     <div class="card-body" id="cardBodyEspecie">
                         <div class="form-row">
                             <div class="form-group col-md-12 ActProd">
@@ -52,21 +52,21 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="txtEdadActProd" class="text-small">Edad (años)</label>
+                        <label for="txtEdadActProd" class="text-small">*Edad (años)</label>
                         @Html.TextBox("txtEdadActProd", "", new { @class = "form-control form-control-sm", maxlength = "2", onkeypress = "return utilSigo.checkNum(event)" })
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="txtRendimientoActProd" class="text-small">Rendimiento de Parcela (kg)</label>
+                        <label for="txtRendimientoActProd" class="text-small">*Rendimiento de Parcela (kg)</label>
                         @Html.TextBox("txtRendimientoActProd", "", new { @class = "form-control form-control-sm", maxlength = "8", onblur = "return utilSigo.onBlurTwoDecimalIS(this,'Area');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="txtCoordEsteS" class="text-small">Coordenada Este</label>
+                        <label for="txtCoordEsteS" class="text-small">*Coordenada Este</label>
                         @Html.TextBox("txtCoordEsteActProd", "", new { @class = "form-control form-control-sm", maxlength = "6", onkeypress = "return utilSigo.checkNum(event)" })
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="txtCoordNorteS" class="text-small">Coordenada Norte</label>
+                        <label for="txtCoordNorteS" class="text-small">*Coordenada Norte</label>
                         @Html.TextBox("txtCoordNorteActProd", "", new { @class = "form-control form-control-sm", maxlength = "7", onkeypress = "return utilSigo.checkNum(event)" })
                     </div>
                 </div>
