--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_DivisionPredio.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_DivisionPredio.cshtml
@@ -13,21 +13,21 @@
                 @Html.Hidden("hdfCodSecuencial")
                 <div class="form-row">
                     <div class="form-group col-md-12">
-                        <label for="txtDivisionInternaDP" class="text-small">División Interna</label>
+                        <label for="txtDivisionInternaDP" class="text-small">*División Interna</label>
                         @Html.TextBox("txtDivisionInternaDP", "", new { @class = "form-control form-control-sm", maxlength = "200", onkeypress = "return utilSigo.checkLetter(event)" })
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-4">
-                        <label for="txtCoordEsteDP" class="text-small">Coordenada Este</label>
+                        <label for="txtCoordEsteDP" class="text-small">*Coordenada Este</label>
                         @Html.TextBox("txtCoordEsteDP", "", new { @class = "form-control form-control-sm", maxlength = "6", onkeypress = "return utilSigo.checkNum(event)" })
                     </div>
                     <div class="form-group col-md-4">
-                        <label for="txtCoordNorteDP" class="text-small">Coordenada Norte</label>
+                        <label for="txtCoordNorteDP" class="text-small">*Coordenada Norte</label>
                         @Html.TextBox("txtCoordNorteDP", "", new { @class = "form-control form-control-sm", maxlength = "7", onkeypress = "return utilSigo.checkNum(event)" })
                     </div>
                     <div class="form-group col-md-4">
-                        <label for="txtAltidudDP" class="text-small">Altitud</label>
+                        <label for="txtAltidudDP" class="text-small">*Altitud</label>
                         @Html.TextBox("txtAltidudDP", "", new { @class = "form-control form-control-sm", maxlength = "4", onkeypress = "return utilSigo.checkNum(event)" })
                     </div>
                 </div>
