--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_EspecieForEst.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_EspecieForEst.cshtml
@@ -17,18 +17,18 @@
                     <div class="form-row">
                         <div class="form-group col-md-12">
                             @{
-                                string nombreComboEspecie = "ddlRenderComboEspecieId1|Especie de Registro de Plantación";
+                                string nombreComboEspecie = "ddlRenderComboEspecieId1|*Especie de Registro de Plantación";
                             }
                             @Html.Partial("~/Areas/General/Views/Controles/_renderComboEspecie.cshtml", nombreComboEspecie)
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="txtCoordEsteRP" class="text-small">Coordenada Este</label>
+                            <label for="txtCoordEsteRP" class="text-small">*Coordenada Este</label>
                             @Html.TextBox("txtCoordEsteRP", "", new { @class = "form-control form-control-sm", maxlength = "6", onkeypress = "return utilSigo.checkNum(event)" })
                         </div>
                         <div class="form-group col-md-6">
-                            <label for="txtCoordNorteRP" class="text-small">Coordenada Norte</label>
+                            <label for="txtCoordNorteRP" class="text-small">*Coordenada Norte</label>
                             @Html.TextBox("txtCoordNorteRP", "", new { @class = "form-control form-control-sm", maxlength = "7", onkeypress = "return utilSigo.checkNum(event)" })
                         </div>
                     </div>
@@ -38,18 +38,18 @@
                     <div class="form-row">
                         <div class="form-group col-md-12">
                             @{
-                                string nombreComboEspecie2 = "ddlRenderComboEspecieId2|Especie de Supervisión";
+                                string nombreComboEspecie2 = "ddlRenderComboEspecieId2|*Especie de Supervisión";
                             }
                             @Html.Partial("~/Areas/General/Views/Controles/_renderComboEspecie2.cshtml", nombreComboEspecie2)
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="txtCoordEsteS" class="text-small">Coordenada Este</label>
+                            <label for="txtCoordEsteS" class="text-small">*Coordenada Este</label>
                             @Html.TextBox("txtCoordEsteRS", "", new { @class = "form-control form-control-sm", maxlength = "6", onkeypress = "return utilSigo.checkNum(event)" })
                         </div>
                         <div class="form-group col-md-6">
-                            <label for="txtCoordNorteS" class="text-small">Coordenada Norte</label>
+                            <label for="txtCoordNorteS" class="text-small">*Coordenada Norte</label>
                             @Html.TextBox("txtCoordNorteRS", "", new { @class = "form-control form-control-sm", maxlength = "7", onkeypress = "return utilSigo.checkNum(event)" })
                         </div>
                     </div>
@@ -67,7 +67,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-12">
                         <label for="txtObservacion" class="text-small">Observación</label>
-                        @Html.TextArea("txtObservacion", "", new { @class = "form-control form-control-sm", maxlength = "500", rows = "3", onkeypress = "return utilSigo.checkLetter(event)" })
+                        @Html.TextArea("txtObservacion", "", new { @class = "form-control form-control-sm", maxlength = "200", rows = "3", onkeypress = "return utilSigo.checkLetter(event)" })
                     </div>
                 </div>
             </form>
