--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_ActividadProd.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_ActividadProd.cshtml
@@ -52,11 +52,11 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="txtEdadActProd" class="text-small">*Edad (años)</label>
+                        <label for="txtEdadActProd" class="text-small">Edad (años)</label>
                         @Html.TextBox("txtEdadActProd", "", new { @class = "form-control form-control-sm", maxlength = "2", onkeypress = "return utilSigo.checkNum(event)" })
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="txtRendimientoActProd" class="text-small">*Rendimiento de Parcela (kg)</label>
+                        <label for="txtRendimientoActProd" class="text-small">Rendimiento de Parcela (kg)</label>
                         @Html.TextBox("txtRendimientoActProd", "", new { @class = "form-control form-control-sm", maxlength = "8", onblur = "return utilSigo.onBlurTwoDecimalIS(this,'Area');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-4">
-                        <label for="txtAltitudActProd" class="text-small">Altitud(msnm)</label>
+                        <label for="txtAltitudActProd" class="text-small">*Altitud(msnm)</label>
                         @Html.TextBox("txtAltitudActProd", "", new { @class = "form-control form-control-sm", maxlength = "4", onkeypress = "return utilSigo.checkNum(event)" })
                     </div>
                     <div class="form-group col-md-4">
