--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_ArbolesSinPoa.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_ArbolesSinPoa.cshtml
@@ -59,7 +59,7 @@
                                     <div class="form-row">
                                         <div class="form-group col-md-4">
                                             <label for="txtTelefonoCUSAF" class="text-small">Teléfono</label>                                            
-                                            @Html.TextBoxFor(m => m.txtTelefonoCUSAF, new { @class = "form-control form-control-sm", maxlength = "10", onkeypress = "return utilSigo.checkNum(event)" })
+                                            @Html.TextBoxFor(m => m.txtTelefonoCUSAF, new { @class = "form-control form-control-sm", maxlength = "10", onkeypress = "return utilSigo.checkTelefono(event)" })
                                         </div>
                                         <div class="form-group col-md-4">
                                             <label for="txtCorreoCUSAF" class="text-small">Correo electrónico</label>
