--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/Render/_renderActividadProd.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/Render/_renderActividadProd.cshtml
@@ -91,16 +91,17 @@
 
     _renderActividadProd.fnDelete = function (obj) {
         var data;
-
-        data = _renderActividadProd.dtActividadProd.row($(obj).parents('tr')).data();
-        if (data["RegEstado"] == "0" || data["RegEstado"] == "2") {
-            _renderActividadProd.tbEliTABLA.push({
-                EliTABLA: "ISUPERVISION_ACTIVIDADPROD",
-                COD_SECUENCIAL: data["COD_SECUENCIAL"]
-            });
-        }
-        _renderActividadProd.dtActividadProd.row($(obj).parents('tr')).remove().draw(false);
-        utilSigo.toastSuccess("Exito", "Se eliminó el registro con éxito");
+        utilSigo.dialogConfirm("", "Está seguro de eliminar el registro?", function (r) {
+            data = _renderActividadProd.dtActividadProd.row($(obj).parents('tr')).data();
+            if (data["RegEstado"] == "0" || data["RegEstado"] == "2") {
+                _renderActividadProd.tbEliTABLA.push({
+                    EliTABLA: "ISUPERVISION_ACTIVIDADPROD",
+                    COD_SECUENCIAL: data["COD_SECUENCIAL"]
+                });
+            }
+            _renderActividadProd.dtActividadProd.row($(obj).parents('tr')).remove().draw(false);
+            utilSigo.toastSuccess("Exito", "Se eliminó el registro con éxito");
+        });
     }
 
     _renderActividadProd.fnImport = function (e, obj) {
@@ -157,13 +158,13 @@
                             <i class="fa mx-2 fa-lg fa-file-o" style="cursor:pointer;" onclick="_renderActividadProd.fnAddEdit('');" data-toggle="tooltip" data-placement="top" title="Nuevo"></i>
                             <i class="fa mx-2 fa-lg fa-window-close-o" style="cursor:pointer;" onclick="_renderActividadProd.fnDeleteAll();" data-toggle="tooltip" data-placement="top" title="Eliminar Todos"></i>
                             @*<label style="cursor:pointer;" class="fa mx-2 fa-lg fa-file-excel-o" title="Importar Archivo" data-toggle="tooltip">
-                                <input type="file" id="fileselect" name="fileselect" style="display:none" size="60" onchange="_renderActividadProd.fnImport(event, this)">
-                            </label>
-                            <a href="@Url.Content("~/Archivos/Plantilla/ActividadesProductivas.xlsx")"> <i class="fa mx-2 fa-lg fa-folder-open" style="cursor:pointer;" data-toggle="tooltip" data-placement="top" title="Descargar Plantilla"></i></a>*@
+                                    <input type="file" id="fileselect" name="fileselect" style="display:none" size="60" onchange="_renderActividadProd.fnImport(event, this)">
+                                </label>
+                                <a href="@Url.Content("~/Archivos/Plantilla/ActividadesProductivas.xlsx")"> <i class="fa mx-2 fa-lg fa-folder-open" style="cursor:pointer;" data-toggle="tooltip" data-placement="top" title="Descargar Plantilla"></i></a>*@
                             <strong>Registro de Actividades Productivas</strong>
                         </div>
                     </th>
-                </tr>                               
+                </tr>
             </thead>
             <tbody></tbody>
         </table>
