--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_ActividadProd.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_ActividadProd.cshtml
@@ -21,7 +21,7 @@
                         </div>
                         <div class="form-group col-md-6">
                             <label for="txtAreaActProd" class="text-small">*Área</label>
-                            @Html.TextBox("txtAreaActProd", "", new { @class = "form-control form-control-sm", maxlength = "7", onblur = "return utilSigo.onBlurThreeDecimal(this,'Area');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
+                            @Html.TextBox("txtAreaActProd", "", new { @class = "form-control form-control-sm", maxlength = "8", onblur = "return utilSigo.onBlurSevenDigitoThreeDecimal(this,'Area');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
                         </div>
                     </div>
                     @*<div class="form-row">*@
@@ -53,27 +53,27 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="txtEdadActProd" class="text-small">Edad (años)</label>
-                        @Html.TextBox("txtEdadActProd", "", new { @class = "form-control form-control-sm", maxlength = "2", onkeypress = "return utilSigo.checkNum(event)" })
+                        @Html.TextBox("txtEdadActProd", "", new { @class = "form-control form-control-sm", maxlength = "2", onkeypress = "return utilSigo.checkTelefono(event)" })
                     </div>
                     <div class="form-group col-md-6">
                         <label for="txtRendimientoActProd" class="text-small">Rendimiento de Parcela (kg)</label>
-                        @Html.TextBox("txtRendimientoActProd", "", new { @class = "form-control form-control-sm", maxlength = "8", onblur = "return utilSigo.onBlurTwoDecimalIS(this,'Area');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
+                        @Html.TextBox("txtRendimientoActProd", "", new { @class = "form-control form-control-sm", maxlength = "7", onblur = "return utilSigo.onBlurSevenDigitoTwoDecimal(this,'Area');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="txtCoordEsteS" class="text-small">*Coordenada Este</label>
-                        @Html.TextBox("txtCoordEsteActProd", "", new { @class = "form-control form-control-sm", maxlength = "6", onkeypress = "return utilSigo.checkNum(event)" })
+                        @Html.TextBox("txtCoordEsteActProd", "", new { @class = "form-control form-control-sm", maxlength = "6", onkeypress = "return utilSigo.checkTelefono(event)" })
                     </div>
                     <div class="form-group col-md-6">
                         <label for="txtCoordNorteS" class="text-small">*Coordenada Norte</label>
-                        @Html.TextBox("txtCoordNorteActProd", "", new { @class = "form-control form-control-sm", maxlength = "7", onkeypress = "return utilSigo.checkNum(event)" })
+                        @Html.TextBox("txtCoordNorteActProd", "", new { @class = "form-control form-control-sm", maxlength = "7", onkeypress = "return utilSigo.checkTelefono(event)" })
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-4">
                         <label for="txtAltitudActProd" class="text-small">*Altitud(msnm)</label>
-                        @Html.TextBox("txtAltitudActProd", "", new { @class = "form-control form-control-sm", maxlength = "4", onkeypress = "return utilSigo.checkNum(event)" })
+                        @Html.TextBox("txtAltitudActProd", "", new { @class = "form-control form-control-sm", maxlength = "4", onkeypress = "return utilSigo.checkTelefono(event)" })
                     </div>
                     <div class="form-group col-md-4">
                         <label for="txtAC" class="text-small">Destino de la producción</label>
