--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_CoberturaBosNat.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_CoberturaBosNat.cshtml
@@ -18,23 +18,23 @@
                     </div>
                     <div class="form-group col-md-6 mt-2">
                         <label for="txtAC" class="text-small">*Área (has)</label>
-                        @Html.TextBox("txtAreaBosNat", "", new { @class = "form-control form-control-sm", maxlength = "8", onblur = "return utilSigo.onBlurThreeDecimal(this,'Area');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
+                        @Html.TextBox("txtAreaBosNat", "", new { @class = "form-control form-control-sm", maxlength = "8", onblur = "return utilSigo.onBlurSevenDigitoThreeDecimal(this,'Area');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="txtCoordEsteS" class="text-small">*Coordenada Este</label>
-                        @Html.TextBox("txtCoordEsteBosNat", "", new { @class = "form-control form-control-sm", maxlength = "6", onkeypress = "return utilSigo.checkNum(event)" })
+                        @Html.TextBox("txtCoordEsteBosNat", "", new { @class = "form-control form-control-sm", maxlength = "6", onkeypress = "return utilSigo.checkTelefono(event)" })
                     </div>
                     <div class="form-group col-md-6">
                         <label for="txtCoordNorteS" class="text-small">*Coordenada Norte</label>
-                        @Html.TextBox("txtCoordNorteBosNat", "", new { @class = "form-control form-control-sm", maxlength = "7", onkeypress = "return utilSigo.checkNum(event)" })
+                        @Html.TextBox("txtCoordNorteBosNat", "", new { @class = "form-control form-control-sm", maxlength = "7", onkeypress = "return utilSigo.checkTelefono(event)" })
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="txtDAP" class="text-small">*Altitud (msnm): </label>
-                        @Html.TextBox("txtAltitudBosNat", "", new { @class = "form-control form-control-sm", maxlength = "4", onkeypress = "return utilSigo.checkNum(event)" })
+                        @Html.TextBox("txtAltitudBosNat", "", new { @class = "form-control form-control-sm", maxlength = "4", onkeypress = "return utilSigo.checkTelefono(event)" })
                     </div>                    
                 </div>
                 <div class="form-row">
