--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_DivisionPredio.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_DivisionPredio.cshtml
@@ -20,15 +20,15 @@
                 <div class="form-row">
                     <div class="form-group col-md-4">
                         <label for="txtCoordEsteDP" class="text-small">*Coordenada Este</label>
-                        @Html.TextBox("txtCoordEsteDP", "", new { @class = "form-control form-control-sm", maxlength = "6", onkeypress = "return utilSigo.checkNum(event)" })
+                        @Html.TextBox("txtCoordEsteDP", "", new { @class = "form-control form-control-sm", maxlength = "6", onkeypress = "return utilSigo.checkTelefono(event)" })
                     </div>
                     <div class="form-group col-md-4">
                         <label for="txtCoordNorteDP" class="text-small">*Coordenada Norte</label>
-                        @Html.TextBox("txtCoordNorteDP", "", new { @class = "form-control form-control-sm", maxlength = "7", onkeypress = "return utilSigo.checkNum(event)" })
+                        @Html.TextBox("txtCoordNorteDP", "", new { @class = "form-control form-control-sm", maxlength = "7", onkeypress = "return utilSigo.checkTelefono(event)" })
                     </div>
                     <div class="form-group col-md-4">
                         <label for="txtAltidudDP" class="text-small">*Altitud</label>
-                        @Html.TextBox("txtAltidudDP", "", new { @class = "form-control form-control-sm", maxlength = "4", onkeypress = "return utilSigo.checkNum(event)" })
+                        @Html.TextBox("txtAltidudDP", "", new { @class = "form-control form-control-sm", maxlength = "4", onkeypress = "return utilSigo.checkTelefono(event)" })
                     </div>
                 </div>
                 <div class="form-row">
