--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/_InformeResDir.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/_InformeResDir.cshtml
@@ -30,7 +30,7 @@
     <div id="informe_header" class="card-header text-small d-flex justify-content-between align-items-center">
         <div>Generar Informe</div>
         <div class="options">
-            <button type="button" class="btn btn-link btn-sm p-0 ml-3" onclick="_informe.Exportar()" v-if="true || Informe.COD_INFORME_DIGITAL && Informe.ESTADO < States.FINALIZADO">
+            <button type="button" class="btn btn-link btn-sm p-0 ml-3" onclick="_informe.Exportar()" v-if="Informe.COD_INFORME_DIGITAL && Informe.ESTADO < States.FINALIZADO">
                 <i class="fa fa-file-word-o fa-fw"></i>Crear documento
             </button>
             <button type="button" class="btn btn-link btn-sm p-0 ml-3" onclick="_informe.Registro()" v-if="Informe.COD_RESOLUCION && Informe.ESTADO < States.COMPLETADO || Informe.FLG_ACTUALIZAR">
@@ -397,7 +397,7 @@
                 <div class="custom-control custom-checkbox custom-control-inline">
                     <input type="checkbox" class="custom-control-input" :id="'inf_' + index" v-model="item.flgSeleccionado">
                     <label class="custom-control-label" :for="'inf_' + index">
-                        <strong>Inciso {{item.inciso}}.</strong> {{item.titulo || 'No se encontró información de la infracción'}}<br />
+                        <strong>{{ _informe.ValidarNumero(item.inciso) ? 'Numeral': 'Inciso'}} {{item.inciso}}.</strong> {{item.titulo || 'No se encontró información de la infracción'}}<br />
                         <span class="small text-muted mt-2" v-if="item.detalle">{{item.detalle}}</span>
                     </label>
                 </div>
@@ -886,3 +886,5 @@
 
 <!--Firma digital-->
 @Html.Partial("~/Areas/General/Views/FirmaDigital/_FirmaModal.cshtml")
+
+<div id="partialviews"></div>
