--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_16.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_16.cshtml
@@ -78,19 +78,31 @@
 {{/if}}
 <ul>
     <li>
-        De la revisión de lo evidenciado en campo, se advierte que el/la administrado (a) no declaró ante la autoridad el aprovechamiento de un volumen de xxxx m3(), correspondiente a las especies xxxx, tal como se muestra en el siguiente cuadro:
+        De la revisión de lo evidenciado en campo, se advierte que el/la administrado (a) no declaró ante la autoridad el aprovechamiento de un volumen de xxxx m3
+        <a style="mso-footnote-id: foot_infraccion_16_1" href="#_foot_infraccion_16_1" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>, correspondiente a las especies xxxx, tal como se muestra en el siguiente cuadro:
     </li>
 </ul>
 <p style="text-align: center;"><strong>Cuadro.</strong></p>
 <ul>
     <li>
         Al respecto, como ha señalado el Tribunal Forestal y de Fauna Silvestre “(...) los administrados se encuentran en la obligación de sustentar la procedencia legal de los productos forestales extraídos, por ello, se exige que ésta se realice mediante las guías de transporte forestal, toda vez que, así se puede acreditar su origen legal, dejando un registro en cuanto a especies y volúmenes movilizados, que permite a la autoridad hacer seguimiento a la trazabilidad del recurso forestal extraído e identificar su trayectoria desde el primer puesto de control.”
+        <a style="mso-footnote-id: foot_infraccion_16_2" href="#_foot_infraccion_16_2" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>
     </li>
     <li>
-        En consecuencia, teniendo en cuenta que la vigencia del Permiso Forestal fue desde el día <strong>xxxxxx hasta el xxxx</strong> y que según el Balance de Extracción y Forma 20 de fecha <strong>xxxxx</strong> el/la administrado (a) no había declarado el volumen de xxxxxm3; se concluye que se encuentra incumpliendo con lo establecido en la cláusula séptima del Permiso Forestal N° <strong>xxxxxxx</strong>.
+        En consecuencia, teniendo en cuenta que la vigencia del Permiso Forestal fue desde el día <strong>xxxxxx hasta el xxxx</strong> y que según el Balance de Extracción y Forma 20 de fecha <strong>xxxxx</strong> el/la administrado (a) no había declarado el volumen de xxxxxm3; se concluye que se encuentra incumpliendo con lo establecido en la cláusula séptima del Permiso Forestal N° <strong>xxxxxxx</strong>
+        <a style="mso-footnote-id: foot_infraccion_16_3" href="#_foot_infraccion_16_3" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>.
     </li>
 </ul>
 
 <p class="enumeration">
-    En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 16 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
+    En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción
+    <a style="mso-footnote-id: foot_infraccion_16_4" href="#_foot_infraccion_16_4" title="">
+        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+    </a> tipificada en el numeral 16 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
 </p>
