--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_e.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_e.cshtml
@@ -14,7 +14,13 @@
                 Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
-                Literal e) del artículo 153 de LFFS, concordado con lo establecido en el Literal e) del artículo 44 del RGF
+                Literal e)
+                <a style="mso-footnote-id: foot_infraccion_e_1" href="#_foot_infraccion_e_1" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a> del artículo 153 de LFFS, concordado con lo establecido en el Literal e)
+                <a style="mso-footnote-id: foot_infraccion_e_2" href="#_foot_infraccion_e_2" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a> del artículo 44 del RGF
             </td>
             <td style="border: 1px solid #000;">
                 No pago por derecho de aprovechamiento
@@ -77,10 +83,16 @@
 {{/if}}
 <ul>
     <li>
-        Conforme al Oficio N° xxx de fecha xxxx recibido de parte de la ARFFS (Registro N° xxxx) el/la administrado (a), tiene una deuda pendiente de pago (i) ascendente US$/. xxxx dólares correspondiente a xx cuotas atrasadas de abonos más intereses por concepto de derecho de aprovechamiento refinanciada referida a los periodos 20xx -20xx, 20xx -20xx, 20xx -20xx; así como (ii) S/. 7 007.79 soles correspondiente a los periodos xxx, estos periodos fueron materia de imputación, por cuanto al inicio del presente PAU ya habían concluido. Lo antes indicado se encuentra ratificado mediante el Oficio Nº xxxxx de fecha xxxx, (registro N°) suscrito por la ARRFS antes citada.
+        Conforme al Oficio N° xxx de fecha xxxx recibido de parte de la ARFFS (Registro N° xxxx) el/la administrado (a), tiene una deuda pendiente de pago (i) ascendente US$/. xxxx dólares correspondiente a xx cuotas atrasadas de abonos más intereses por concepto de derecho de aprovechamiento refinanciada referida a los periodos 20xx -20xx, 20xx -20xx, 20xx -20xx; así como (ii) S/. XXXX soles
+        <a style="mso-footnote-id: foot_infraccion_e_3" href="#_foot_infraccion_e_3" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a> correspondiente a los periodos xxx, estos periodos fueron materia de imputación, por cuanto al inicio del presente PAU ya habían concluido. Lo antes indicado se encuentra ratificado mediante el Oficio Nº xxxxx de fecha xxxx, (registro N°) suscrito por la ARRFS antes citada.
     </li>
     <li>
-        Se han configurado los supuestos establecidos en los “Criterios para la declaración de caducidad del título habilitante en el Procedimiento Administrativo Único – PAU del OSINFOR”, para declarar la caducidad de título habilitante por la falta de pago por derecho de aprovechamiento.
+        Se han configurado los supuestos establecidos en los “Criterios para la declaración de caducidad del título habilitante en el Procedimiento Administrativo Único – PAU del OSINFOR”, para declarar la caducidad de título habilitante por la falta de pago por derecho de aprovechamiento
+        <a style="mso-footnote-id: foot_infraccion_e_4" href="#_foot_infraccion_e_4" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>.
     </li>
 </ul>
 <p class="enumeration">
