--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_2.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_2.cshtml
@@ -141,11 +141,20 @@
 {{if informe.COD_TIPO_INFORME == 1}}
 <ul>
     <li>
-        El PMFI/PO N° xx – PC xx fue aprobado con fecha xx de xxxx de xxxx, con una vigencia hasta el xx de diciembre de xxx; por lo que el/la administrada (o) tenía plazo hasta el xx de xxx de xxxx, para presentar ante la ARFFS y al OSINFOR, el informe de
+        El PMFI/PO N° xx – PC xx fue aprobado con fecha xx de xxxx de xxxx, con una vigencia hasta el xx de diciembre de xxx
+        <a style="mso-footnote-id: foot_infraccion_2_1" href="#_foot_infraccion_2_1" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>; por lo que el/la administrada (o) tenía plazo hasta el xx de xxx de xxxx, para presentar ante la ARFFS y al OSINFOR, el informe de
         ejecución anual/final, conforme a lo establecido en el artículo 66 del RGF
+        <a style="mso-footnote-id: foot_infraccion_2_2" href="#_foot_infraccion_2_2" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>
     </li>
     <li>
-        De la verificación de los documentos presentados en el escrito de descargos al escrito de descargos al Informe Final de Instrucción (SITD N° xxxxxxxxx) administrado (a) sí/no ha cumplido con presentar el Informe de Ejecución del anual, del periodo xxxx - xxxx, el cual debe contener las actividades de aprovechamiento de productos forestales maderables y no maderables, conforme se aprecia en las siguientes imágenes:
+        De la verificación de los documentos presentados en el escrito de descargos al escrito de descargos al Informe Final de Instrucción (SITD N° xxxxxxxxx) administrado (a) sí/no ha cumplido
+        <a style="mso-footnote-id: foot_infraccion_2_3" href="#_foot_infraccion_2_3" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a> con presentar el Informe de Ejecución del anual, del periodo xxxx - xxxx, el cual debe contener las actividades de aprovechamiento de productos forestales maderables y no maderables, conforme se aprecia en las siguientes imágenes:
     </li>
 </ul>
 <p style="text-align: center;"><strong>Consignar imagen<br />Fuente: SITD N°xxxxxxxxxx</strong></p>
@@ -158,5 +167,8 @@
 </ul>
 
 <p class="enumeration">
-    En ese contexto, de acuerdo a lo señalado precedentemente, se desestima/se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 2 del Anexo 1 del RISMFFS.
+    En ese contexto, de acuerdo a lo señalado precedentemente, se desestima/se confirma que el/la administrado (a) cometió la infracción
+    <a style="mso-footnote-id: foot_infraccion_2_4" href="#_foot_infraccion_2_4" title="">
+        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+    </a> tipificada en el numeral 2 del Anexo 1 del RISMFFS.
 </p>
