--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_32.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_32.cshtml
@@ -81,16 +81,28 @@
         Mediante la Resolución Jefatural N° xxxx de fecha xxx, la ARFFS aprobó el xxx, en la cual se establece que el aprovechamiento se realizará de conformidad con los datos (vértices de ubicación en coordenadas UTM, especie y volumen) señalados en el plan de manejo aprobado.
     </li>
     <li>
-        No obstante, durante la supervisión en campo, se constató la inexistencia de xxx individuos (xxx aprovechables y xx semilleros), de las especies xxx, los cuales no existen en su totalidad de acuerdo a las coordenadas UTM declaradas en el xxx, así como tampoco se encontraron vestigios de su aprovechamiento, conforme se advierte de las siguientes imágenes:
+        No obstante, durante la supervisión en campo
+        <a style="mso-footnote-id: foot_infraccion_32_1" href="#_foot_infraccion_32_1" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>, se constató la inexistencia de xxx individuos (xxx aprovechables y xx semilleros), de las especies xxx, los cuales no existen en su totalidad de acuerdo a las coordenadas UTM declaradas en el xxx, así como tampoco se encontraron vestigios de su aprovechamiento, conforme se advierte de las siguientes imágenes:
     </li>
 </ul>
 <p style="text-align: center;"><strong>Mapas, y/o tomas fotográficas que evidencian la inexistencia</strong></p>
 <ul>
     <li>
-        A pesar de ello, mediante el Informe de Ejecución (periodo xxxx-xxxx), presentado por el/la administrado (a) se señaló el aprovechamiento de xxxx de la especie xxx conforme se advierte de las siguientes imágenes:
+        A pesar de ello, mediante el Informe de Ejecución
+        <a style="mso-footnote-id: foot_infraccion_32_2" href="#_foot_infraccion_32_2" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a> (periodo xxxx-xxxx), presentado por el/la administrado (a) se señaló el aprovechamiento de xxxx de la especie xxx conforme se advierte de las siguientes imágenes:
     </li>
     <li>
-        Al respecto, el artículo xxx del (RGF o RGFFSCNCC), establece que: “El informe de ejecución (…) tiene carácter de declaración jurada”.
+        Al respecto, el artículo xxx
+        <a style="mso-footnote-id: foot_infraccion_32_3" href="#_foot_infraccion_32_3" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a> del (RGF o RGFFSCNCC), establece que: “El informe de ejecución (…) tiene carácter de declaración jurada”
+        <a style="mso-footnote-id: foot_infraccion_32_4" href="#_foot_infraccion_32_4" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>.
     </li>
     <li>
         En consecuencia, al haberse determinado que xxx individuos (xxx aprovechables y xx semilleros) declarados no existen en campo y que no se evidenciaron actividades de aprovechamiento en campo, se ha configurado la infracción consistente en elaborar, formular, suscribir, presentar o remitir documentos con información adulterada, falsa o incompleta contenida en documentos físicos o medios informáticos, en este caso, la información falsa contenida en el informe de ejecución que fue presentado por la administrada a la (precisar ARFFS y/o OSINFOR), a través del escrito xxxx. de fecha xxxxx, con registro N° xxxx.
