Actualización  Mensajes de Alerta

--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_CoberturaBosNat.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_CoberturaBosNat.cshtml
@@ -18,7 +18,7 @@
                     </div>
                     <div class="form-group col-md-6 mt-2">
                         <label for="txtAC" class="text-small">*Área (has)</label>
-                        @Html.TextBox("txtAreaBosNat", "", new { @class = "form-control form-control-sm", maxlength = "8", onblur = "return utilSigo.onBlurFourDigitoThreeDecimal(this,'Area');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
+                        @Html.TextBox("txtAreaBosNat", "", new { @class = "form-control form-control-sm", maxlength = "8", onblur = "return utilSigo.onBlurFourDigitoThreeDecimal(this,'Área (has)');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
                     </div>
                 </div>
                 <div class="form-row">
