--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_ActividadProd.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_ActividadProd.cshtml
@@ -21,7 +21,7 @@
                         </div>
                         <div class="form-group col-md-6">
                             <label for="txtAreaActProd" class="text-small">*Área</label>
-                            @Html.TextBox("txtAreaActProd", "", new { @class = "form-control form-control-sm", maxlength = "8", onblur = "return utilSigo.onBlurFourDigitoThreeDecimal(this,'Area');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
+                            @Html.TextBox("txtAreaActProd", "", new { @class = "form-control form-control-sm", maxlength = "8", onblur = "return utilSigo.onBlurFourDigitoThreeDecimal(this,'Área');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
                         </div>
                     </div>
                     @*<div class="form-row">*@
@@ -57,7 +57,7 @@
                     </div>
                     <div class="form-group col-md-6">
                         <label for="txtRendimientoActProd" class="text-small">Rendimiento de Parcela (kg)</label>
-                        @Html.TextBox("txtRendimientoActProd", "", new { @class = "form-control form-control-sm", maxlength = "7", onblur = "return utilSigo.onBlurFourDigitoTwoDecimal(this,'Area');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
+                        @Html.TextBox("txtRendimientoActProd", "", new { @class = "form-control form-control-sm", maxlength = "7", onblur = "return utilSigo.onBlurFourDigitoTwoDecimal(this,'Rendimiento de Parcela (kg)');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
                     </div>
                 </div>
                 <div class="form-row">
